added new get and post requests
