# openapi/openapi.yaml
@@ -73,6 +73,32 @@ paths:
       responses:
         '204':
           description: Deleted the task
+  /tasks/{userId}:
+    parameters:
+      - name: userId
+        in: path
+        required: true
+        schema:
+          type: string
+    post:
+      summary: Create task by user id
+      tags:
+        - tasks
+      
+      requestBody:
+        description: The user to create
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Task'
+      responses:
+        '201':
+          description: The task create by user id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Task'
   /users:
     get:
       summary: Get all users
@@ -143,6 +169,26 @@ paths:
       responses:
         '204':
           description: Deleted the user
+  /users/{userId}/tasks:
+    get:
+      summary: Get all users
+      tags:
+        - tasks
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: A list of users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
 components:
   schemas:
     User:
@@ -163,3 +209,5 @@ components:
           type: string
         is_done:
           type: boolean
+        user_id:
+          type: string
